--- a/web/src/themes/base/tables.css
+++ b/web/src/themes/base/tables.css
@@ -193,14 +193,14 @@ tr:nth-child(even) {
     /* Compact captions for print */
     stencila-table [slot='caption'] p {
         line-height: 1.2 !important;
-        margin-top: var(--spacing-content) !important;
+        margin-top: var(--content-spacing) !important;
         margin-bottom: 0 !important;
         font-size: 9pt !important;
     }
 
     stencila-table [slot='caption'] {
-        margin-top: var(--spacing-content) !important;
-        margin-bottom: var(--spacing-content) !important;
+        margin-top: var(--content-spacing) !important;
+        margin-bottom: var(--content-spacing) !important;
     }
 
     /* Avoid breaks within tables and float to bottom */
